--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@shared/mocks": ["./projects/shared/mocks"],
+      "@shared/types": ["./projects/shared/types"]
+    }
   }
 }
