--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "projects/shared/styles"
+                "projects/shared-styles"
               ]
             },
             "styles": [
@@ -95,7 +95,7 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
-                "projects/shared/styles"
+                "projects/shared-styles"
               ]
             },
             "styles": [
