--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.0",
-    "@angular/common": "~10.1.0",
-    "@angular/compiler": "~10.1.0",
-    "@angular/core": "~10.1.0",
-    "@angular/forms": "~10.1.0",
-    "@angular/platform-browser": "~10.1.0",
-    "@angular/platform-browser-dynamic": "~10.1.0",
-    "@angular/router": "~10.1.0",
+    "@angular/animations": "~11.2.8",
+    "@angular/common": "~11.2.8",
+    "@angular/compiler": "~11.2.8",
+    "@angular/core": "~11.2.8",
+    "@angular/forms": "~11.2.8",
+    "@angular/platform-browser": "~11.2.8",
+    "@angular/platform-browser-dynamic": "~11.2.8",
+    "@angular/router": "~11.2.8",
     "darian-system": "^1.1.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.0",
-    "@angular/cli": "~10.1.0",
-    "@angular/compiler-cli": "~10.1.0",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "~0.1102.7",
+    "@angular/cli": "~11.2.7",
+    "@angular/compiler-cli": "~11.2.8",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/json-server": "^0.14.2",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@types/json-server": "^0.14.3",
+    "@types/node": "^14.0.0",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "json-server": "^0.16.1",
-    "karma": "~5.0.0",
+    "json-server": "^0.16.3",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -45,6 +45,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.1.5"
   }
 }
