--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod-watch": "ng build --prod --watch",
+    "start-server": "http-server -p 4550 -c-1 -P http://localhost:4550? dist/space-app",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -34,6 +36,7 @@
     "@types/json-server": "^0.14.3",
     "@types/node": "^14.0.0",
     "codelyzer": "^6.0.1",
+    "http-server": "^0.12.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "json-server": "^0.16.3",
