--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
+    "a2s-comm": "^11.1.2",
     "darian-system": "^1.1.2",
     "rxjs": "^6.6.7",
     "tslib": "^2.1.0",
