--- a/package.json
+++ b/package.json
@@ -5,50 +5,42 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-prod-watch": "ng build --prod --watch",
+    "build-prod-watch": "ng build --configuration production --watch",
     "start-server": "http-server -p 4550 -c-1 -P http://localhost:4550? dist/space-app",
     "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
     "dev-api": "tsc -p projects/dev-api && node dist/dev-api/server.js"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.8",
-    "@angular/common": "~11.2.8",
-    "@angular/compiler": "~11.2.8",
-    "@angular/core": "~11.2.8",
-    "@angular/forms": "~11.2.8",
-    "@angular/platform-browser": "~11.2.8",
-    "@angular/platform-browser-dynamic": "~11.2.8",
-    "@angular/router": "~11.2.8",
-    "a2s-comm": "^11.1.2",
+    "@angular/animations": "~12.2.10",
+    "@angular/common": "~12.2.10",
+    "@angular/compiler": "~12.2.10",
+    "@angular/core": "~12.2.10",
+    "@angular/forms": "~12.2.10",
+    "@angular/platform-browser": "~12.2.10",
+    "@angular/platform-browser-dynamic": "~12.2.10",
+    "@angular/router": "~12.2.10",
+    "a2s-comm": "^12.0.0",
     "darian-system": "^1.1.2",
-    "rxjs": "^6.6.7",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.10.2"
+    "rxjs": "~6.6.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.7",
-    "@angular/cli": "~11.2.7",
-    "@angular/compiler-cli": "~11.2.8",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "~12.2.10",
+    "@angular/cli": "~12.2.10",
+    "@angular/compiler-cli": "~12.2.10",
+    "@types/jasmine": "~3.8.0",
     "@types/json-server": "^0.14.3",
     "@types/node": "^14.0.0",
-    "codelyzer": "^6.0.1",
     "http-server": "^0.12.3",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "~3.8.0",
     "json-server": "^0.16.3",
     "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "^4.1.5"
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "typescript": "~4.3.5"
   }
 }
