--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "projects/space-app/src/favicon.ico",
-              "projects/space-app/src/assets"
+              "projects/space-app/src/assets",
+              {
+                "input": "dist/shared-lib/assets",
+                "glob": "*",
+                "output": "assets"
+              }
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
@@ -108,6 +113,37 @@
               "projects/space-app/src/styles.scss"
             ],
             "scripts": []
+          }
+        }
+      }
+    },
+    "shared-lib": {
+      "projectType": "library",
+      "root": "projects/shared-lib",
+      "sourceRoot": "projects/shared-lib/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/shared-lib/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/shared-lib/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/shared-lib/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/shared-lib/src/test.ts",
+            "tsConfig": "projects/shared-lib/tsconfig.spec.json",
+            "karmaConfig": "projects/shared-lib/karma.conf.js"
           }
         }
       }
