--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build-prod-watch": "ng build --configuration production --watch",
     "start-server": "http-server -p 4550 -c-1 -P http://localhost:4550? dist/space-app",
     "test": "ng test",
-    "dev-api": "tsc -p projects/dev-api && node dist/dev-api/server.js"
+    "dev-api": "tsc -p projects/dev-api && node dist/dev-api/server.js",
+    "shared-lib": "ng build shared-lib --watch"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "~13.0.3",
     "@types/jasmine": "~3.10.0",
     "@types/json-server": "^0.14.3",
+    "@types/minimist": "^1.2.2",
     "@types/node": "^14.0.0",
     "http-server": "^0.12.3",
     "jasmine-core": "~3.10.0",
@@ -41,6 +43,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "ng-packagr": "^13.0.0",
     "typescript": "~4.4.4"
   }
 }
