--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
                 "input": "dist/shared-lib/assets",
                 "glob": "*",
                 "output": "assets"
-              }
+              },
+              "projects/space-app/src/manifest.webmanifest"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
@@ -39,7 +40,9 @@
             "styles": [
               "projects/space-app/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "serviceWorker": true,
+            "ngswConfigPath": "projects/space-app/ngsw-config.json"
           },
           "configurations": {
             "production": {
@@ -102,7 +105,8 @@
             "karmaConfig": "projects/space-app/karma.conf.js",
             "assets": [
               "projects/space-app/src/favicon.ico",
-              "projects/space-app/src/assets"
+              "projects/space-app/src/assets",
+              "projects/space-app/src/manifest.webmanifest"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
