--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "~13.0.3",
     "@angular/router": "~13.0.3",
     "@angular/service-worker": "~13.0.3",
+    "@ngrx/store": "^13.0.2",
+    "@ngrx/store-devtools": "^13.0.2",
     "a2s-comm": "^13.0.0",
     "darian-system": "^1.1.2",
     "rxjs": "~7.4.0",
@@ -33,6 +35,7 @@
     "@angular-devkit/build-angular": "~13.0.4",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.3",
+    "@ngrx/schematics": "^13.0.2",
     "@types/jasmine": "~3.10.0",
     "@types/json-server": "^0.14.3",
     "@types/minimist": "^1.2.2",
