--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "~13.0.3",
     "@angular/router": "~13.0.3",
     "@angular/service-worker": "~13.0.3",
+    "@ngrx/effects": "^13.0.2",
+    "@ngrx/entity": "^13.0.2",
     "@ngrx/store": "^13.0.2",
     "@ngrx/store-devtools": "^13.0.2",
     "a2s-comm": "^13.0.0",
